# disaster-tweets-detection

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
inference_pipeline/: .gitignore  Makefile  README.md  packages.txt  pyproject.toml  test.py
inference_pipeline/deploy/docker/: Dockerfile  app.py  preprocessing.py
inference_pipeline/deploy/streamlit-app/: Dockerfile  app.py  models.py  requirements.txt  test.py
inference_pipeline/deploy/streamlit_app/: Dockerfile  models.py  requirements.txt
inference_pipeline/inference_pipeline/: __init__.py  constants.py  disaster_tweet_detector.py  models.py
inference_pipeline/inference_pipeline/data/: disaster_tweets_data.py
inference_pipeline/streamlit-app/: app.py  constants.py  requirements.txt
inference_pipeline/streamlit-app/data/: test.py
inference_pipeline/tools/: detector.py  requirements.txt  ui.py
streamlit-app/: .dockerignore  app.py
streamlit-app/.streamlit/: secrets.toml
training_pipeline/: .beamignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
training_pipeline/configs/: inference_config.yaml  training_config.yaml
training_pipeline/dataset/: inference.csv  train.csv
training_pipeline/tools/: inference_run.py  train_run.py
training_pipeline/training_pipeline/: __init__.py  configs.py  constants.py  metrics.py  models.py  paths.py  utils.py
training_pipeline/training_pipeline/api/: inference.py  training.py
training_pipeline/training_pipeline/data/: disaster_tweets_data.py  download_kaggle_data.py
(+4 files in other folders)
